[package]
name = "uiv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = "1.0.159"
serde_json = "1.0.96"
async-std = "1.12.0"
# surf = { version = "2.3.2", features = ["h1-client-rustls"] }
yew = { version = "0.20", features = ["csr"] }
getrandom = { version = "0.2.7", features = [
    "js",
] } # what do we need random for?
reqwasm = "0.5.0"
yew-router = "0.17.0"
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.34"
futures = "0.3.28"
wasm-cookies = "0.2.1"
rand = "0.8.5"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
gloo-timers = "0.2.6"
# async-h1 = "2.3.3"
# reqwest = { version = "0.11.16", features = ["rustls-tls"] }
